--- a/组件统计列表.md
+++ b/组件统计列表.md
@@ -8,13 +8,20 @@
 | ac-export-excel |  0.0.1 |  应用组件 | 前端导出excel组件,已table结果的导出组件。| 王石、冉言川 
 | @yonyou/ac-input-locale |  1.0.7 |  应用组件 | 前端多语录入组件。| 王石、陈盼
 | @yonyou/ac-mobile-locale |  0.0.1 |  应用组件 | 前端手机号录入国际化组件。| 陈盼
-
+| ref-core | 1.0.0 | 应用组件 | 参照基础包 | 王小刚 |
+| ref-multiple-selection | 1.0.0 | 应用组件 | 多选参照 | 王小刚 |
+| ref-multiple-table | 1.0.0 | 应用组件 | 复杂查询表格参照 | 王小刚 |
+| ref-table | 1.0.0 | 应用组件 | 表格参照 | 王小刚 |
+| ref-tree | 1.0.0 | 应用组件 | 树参照 | 王小刚 |
+| ref-tree-table | 1.0.0 | 应用组件 | 树表参照 | 王小刚 |
+| ref-tree-transfer | 1.0.0 | 应用组件 | 穿梭参照 | 王小刚 |
 
 
 ### 10.29 待完成组件
  
 |  名称 | 版本 | 组件类型 | 功能描述 | 作者 |
 | --- | --- | --- | --- |--- |
-| ac-export-data-excel |  0.0.1 |  应用组件 | 前端导出excel组件,以data数据源为导向的数据导出。| 王石
+| ac-export-data-excel |  0.0.1 |  应用组件 | 前端导出excel组件,以data数据源为导向的数据导出。| 王石 |
+| ref-combobox |  1.0.0 |  应用组件 | 下拉参照 | 王小刚 |
 
 
